--- a/public/style.css
+++ b/public/style.css
@@ -23,6 +23,11 @@ h1, h2, h3, h4, h5, p {
     width: 152px;
 }
 
+@media only screen and (min-width: 768px) {
+    .show_mobile {
+      display: none;
+    }
+
 @media only screen and (max-width: 768px) {
     * {
       display: none;
